# mai-os-labs

./: README.md
kpp/: CMakeLists.txt  GameClient.cpp  GameClient.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  client.cpp  server.cpp
ll3/: CMakeLists.txt  child2.cpp  first.txt  parent.cpp  second.txt
ll567/: CMakeLists.txt  ComputeNode.cpp  ComputeNode.h  NodeManager.cpp  NodeManager.h  main.cpp
ll8/: Logfile1.CSV  Logfile2.CSV  Logfile3.CSV  Logfile4.CSV  Logfile5-7.CSV
